force-app/main/default/objects/Vehicle__c/fields/Expense_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Expense_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Relationship</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>