force-app/main/default/objects/Vehicle__c/fields/IsInsured__c.field-meta.xml
<CustomField>
    <fullName>IsInsured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInsured</label>
    <type>Checkbox</type>
</CustomField>